--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>Роботу виконав Гомолач</h1>
+    <h1>Роботу виконав Гомолач Микола</h1>
     <p><a href="https://github.com/MykolaGomolach/RRPS02_group2/blob/main/Gomolach.html">Гомолач</a></p>
     <p><a href="https://github.com/MykolaGomolach/RRPS02_group2/blob/main/Kryvonos.html">Кривонос</a></p>
     <p><a href="https://github.com/MykolaGomolach/RRPS02_group2/blob/main/Kuzmuk.html">Кузьмук</a></p>
